--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -475,205 +475,69 @@ only screen and (max-width: 767.98px) {
   left: 15px;
 }
 
-.preview {
-  padding: 20px;
-  margin-bottom: 4rem;
-  background: rgb(224, 235, 241);
-  border-radius: 10px;
-
-  .preview-content {
-    display: flex;
-    align-items: center;
-
-    .box-1 {
-      width: 40%;
-      border-radius: 10px;
-      margin-right: 20px;
-
-      .hov-img0 {
-        display: block;
-        overflow: hidden;
-        border-radius: 5px;
-
-        img {
-          transition: transform 0.9s ease;
-          background-color: #fff;
-          max-height: 285px;
-        }
-
-        &:hover img {
-          transform: scale(1.1);
-        }
-      }
-
-      .right-side-card {
-        width: 100%;
-      }
-
-      .trending-container {
-        width: 100%;
-      }
-    }
-
-    .box-1.order-2 {
-      order: 2;
-      margin-right: 0;
-      margin-left: 20px;
-    }
-
-    .box-2 {
-      width: 60%;
-
-      h3 {
-        margin-bottom: 15px;
-      }
-
-      .more {
-        margin: 10px;
-
-        div {
-          display: flex;
-          align-items: center;
-
-          a {
-            margin-left: 10px;
-          }
-        }
-      }
-
-      p {
-        font-size: 20px;
-        font-weight: 300;
-        line-height: 1.2;
-        color: #1b2127;
-      }
-
-      .footer {
-        display: flex;
-        align-items: center;
-        border-left: 3px solid $color-2;
-        margin-top: 15px;
-
-        p {
-          font-family: Poppins-Light;
-          font-size: 20px;
-          line-height: 1;
-          color: #666;
-          padding: 10px;
-        }
-      }
-    }
-
-    @media screen and (max-width: 900px) {
-      flex-direction: column;
-
-      .box-1,
-      .box-2 {
-        width: 100%;
-        margin: 0;
-        order: 1 !important;
-      }
-    }
-  }
-}
-
-.preview.claire {
-  background: transparent;
-  border: 2px solid rgb(224, 235, 241);
-}
-
-
-.ContactForm {
-  padding-bottom: 80px;
-  background-color: #fff !important;
-
-  .left {
-    color: #0c1f31;
-
-    h2 {
-      font-size: 36px;
-      font-weight: 800;
-      color: $color-5;
-    }
-
-    .contact-box {
-      margin: 46px 38px 0 0px;
-      border: 1px solid $color-1;
-      padding: 15px;
-      background-color: $white;
-
-      .btn {
-        padding: 5px 15px;
-        -webkit-border-radius: 0;
-        -moz-border-radius: 0;
-        border-radius: 0;
-        margin-top: -56px;
-        border-radius: 4px;
-      }
-
-      .content {
-        display: flex;
-        align-items: center;
-        margin: 10px;
-      }
-
-      .icon {
-        font-size: 18px;
-        color: #ffffff;
-        background: #003f6d;
-        width: 34px;
-        height: 34px;
-        line-height: 36px;
-        border-radius: 4px;
-        text-align: center;
-      }
-
-      p {
-        font-size: 18px;
-        margin-bottom: 0px;
-        font-weight: 600;
-        color: #003f6d;
-        margin-left: 10px;
-      }
-
-      a {
-        color: #003f6d;
-      }
-    }
-  }
-
-  form {
-    background: #fff;
-    padding: 45px;
-    color: #0c1f31;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
-
-    h4 {
-      font-size: 26px;
-      text-transform: uppercase;
-      font-weight: 800;
-      text-align: center;
-      color: #003f6d;
-      letter-spacing: 1px;
-    }
-
-    .form-control {
-      padding: 0.6rem 0.75rem;
-      margin: 15px 0px;
-    }
-
-    .btn-warning {
-      color: #fff;
-      border-color: #ffffff;
-      background-image: linear-gradient(96deg, $color-1 0%, $color-2 100%);
-    }
-  }
-}
-
 .testi-box {
   position: relative;
   max-width: 630px;
   border: none;
   margin: 0 auto;
   text-align: center
+}
+
+.blog-box {
+  background-color: transparent;
+  border: none;
+  -webkit-box-shadow: 0 3px 10px 0 rgba(49, 64, 71, .08);
+  box-shadow: 0 3px 10px 0 rgba(49, 64, 71, .08);
+  border-radius: 6px;
+
+  .blog-img {
+    border-radius: 6px 6px 0 0;
+
+    .bg-overlay {
+      opacity: 0;
+      -webkit-transition: all .5s ease;
+      transition: all .5s ease;
+    }
+
+    .author {
+      -webkit-transition: all .5s ease;
+      transition: all .5s ease;
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      opacity: 0;
+    }
+
+    .likes {
+      -webkit-transition: all .5s ease;
+      transition: all .5s ease;
+      position: absolute;
+      bottom: 15px;
+      right: 15px;
+      opacity: 0;
+    }
+  }
+
+  .bg-overlay {
+    background-color: rgba(49, 64, 71, .5);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+  }
+}
+
+.blog-box:hover .blog-img {
+  .bg-overlay {
+    opacity: .6;
+  }
+
+  .author {
+    opacity: 1;
+  }
+
+  .likes {
+    opacity: 1;
+  }
 }
