--- a/src/styles/pages/_profil.scss
+++ b/src/styles/pages/_profil.scss
@@ -1,4 +1,4 @@
-.page-title-area {
+.page-title {
     margin-bottom: 50px;
     height: 200px;
     background: linear-gradient(90deg, $color-2, $color-3 63%);
