--- a/src/styles/pages/_profil.scss
+++ b/src/styles/pages/_profil.scss
@@ -50,7 +50,7 @@
     }
 }
 
-.dashboard-area {
+.dashboard {
     padding: 50px 0;
 
     .dashboard-img {
@@ -180,7 +180,7 @@
             transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
         }
 
-        .gender-area {
+        .gender {
             span {
                 display: block;
                 margin-bottom: 20px;
