--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -541,3 +541,88 @@ only screen and (max-width: 767.98px) {
     opacity: 1;
   }
 }
+
+
+.featured-label {
+  top: 10px;
+  position: absolute;
+  right: 0
+}
+
+.featured-label .featured {
+  margin-bottom: 10px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 10px;
+  background: #766df4;
+  position: relative;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 6px
+}
+
+.featured-label .featured::before {
+  content: "";
+  position: absolute;
+  border-top: 11px solid transparent;
+  border-bottom: 11px solid transparent;
+  border-right: 11px solid #766df4;
+  left: -11px;
+  top: 0
+}
+
+.avatar-xs {
+  height: 2.5rem;
+  width: 2.5rem;
+  line-height: 2.5rem
+}
+
+.avatar-sm {
+  height: 3rem;
+  width: 3rem;
+  line-height: 3rem
+}
+
+.avatar-md {
+  height: 4rem;
+  width: 4rem
+}
+
+.avatar-lg {
+  height: 5rem;
+  width: 5rem
+}
+
+.like-candidate {
+  svg {
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
+  .like-job {
+    display: flex;
+    align-items: center;
+    position: relative;
+
+    .liked {
+      stroke: #FF7B77;
+      fill: #FF7B77;
+    }
+
+    span {
+      font-size: 1.02rem;
+      position: absolute;
+      transform: translate(29px, 2px);
+    }
+  }
+}
+
+.team-list {
+  height: 150px;
+  overflow: scroll;
+}
