--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,234 @@
 @import "./components/job";
 @import "./components/auth";
 @import "./components/candidates";
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1060;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  outline: 0;
+}
+
+.modal {
+  display: block !important;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  z-index: -99;
+}
+
+.modal.show {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: visible;
+  z-index: 99999999;
+  -webkit-animation: slideInDown 0.4s forwards;
+  animation: slideInDown 0.4s forwards;
+}
+
+.modal .modal-header {
+  padding: 0 10px;
+  border-bottom: none;
+}
+
+.modal .modal-header .close {
+  color: #222222;
+  font-size: 34px;
+  opacity: 1;
+  display: block;
+  position: absolute;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  margin: 0;
+  right: 10px;
+  top: 10px;
+  font-weight: 500;
+  z-index: 999;
+  line-height: 30px;
+  border-radius: 50%;
+}
+
+.modal .modal-body {
+  padding: 20px 20px 20px 20px;
+}
+
+@media only screen and (max-width: 479.98px) {
+  .modal .modal-body {
+    padding: 10px;
+  }
+}
+
+.modal.show .modal-dialog {
+  transform: none;
+}
+
+.modal-dialog {
+  position: relative;
+  width: auto;
+  margin: 0.5rem;
+  pointer-events: none;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .modal-dialog {
+    max-width: 700px;
+  }
+}
+
+.modal-dialog {
+  max-width: 1000px;
+}
+
+@media (min-width: 576px) {
+  .modal-dialog-centered {
+    min-height: calc(100% - 3.5rem);
+  }
+}
+
+@media (min-width: 576px) {
+  .modal-dialog {
+    max-width: 500px;
+    margin: 1.75rem auto;
+  }
+}
+
+.modal-dialog-centered {
+  display: flex;
+  align-items: center;
+  min-height: calc(100% - 1rem);
+}
+
+.modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+}
+
+.modal .modal-header {
+  padding: 0 10px;
+  border-bottom: none;
+}
+
+.modal-header {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 1rem;
+  border-bottom: 1px solid #dee2e6;
+  border-top-left-radius: calc(0.3rem - 1px);
+  border-top-right-radius: calc(0.3rem - 1px);
+}
+
+.modal .modal-body {
+  padding: 20px 20px 20px 20px;
+}
+
+.modal-body {
+  position: relative;
+  flex: 1 1 auto;
+  padding: 1rem;
+}
+
+tr {
+  line-height: 1rem;
+}
+
+.btn.pending {
+  background-color: deeppink;
+}
+
+.btn.approved {
+  background-color: $color-3;
+}
+
+.btn.valider {
+  background-color: chartreuse;
+}
+
+.btn.refuser,
+.btn.delete {
+  background-color: $color-1;
+}
+
+.btn.view {
+  background-color: aqua;
+}
+
+.dataTables_length {
+  label {
+    font-weight: normal;
+    text-align: left;
+    white-space: nowrap;
+    display: inline-block;
+    margin-bottom: 0.5rem;
+
+    select {
+      width: auto;
+      display: inline-block;
+    }
+  }
+}
+
+.dataTables_filter {
+  text-align: right;
+
+  label {
+    font-weight: normal;
+    white-space: nowrap;
+    text-align: left;
+    display: inline-block;
+    margin-bottom: 0.5rem;
+
+    input {
+      margin-left: 0.5em;
+      display: inline-block;
+      width: auto;
+    }
+  }
+}
+
+.ltext {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  font-size: 15px;
+  color: #2c4964;
+}
+
+
+.blog-masonry-box .blog-img,
+.post-preview .blog-img {
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3)
+}
+
+.blog-masonry-box:hover .blog-img,
+.post-preview:hover .blog-img {
+  -webkit-transform: scale(1.3) translateX(-10px);
+  transform: scale(1.3) translateX(-10px)
+}
+
+.cv-download {
+  svg {
+    width: 30px;
+  }
+}
